[CODE] Modify to new response format
